Mon Feb 24 21:43:26 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* ltconfig, ltmain.sh: New versions from libtool-0.9.
	
	* configure.in: Added AM_MAINTAINER_MODE

Fri Feb  7 17:57:46 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* config.sub, config.guess: New versions, that handle i686, etc.

Thu Jan 23 07:06:15 1997  Mark Galassi  <rosalia@papageno.lanl.gov>

	* newdoc/tutorial/guile-tut.texi: started checking in the Guile
	tutorial rewrite, but have not merged much into it yet.

Tue Jan 21 17:28:40 1997  Mark Galassi  <rosalia@sarastro.lanl.gov>

	* newdoc/ref/guile-ref.texi: started checking in parts of the
	reference manual re-write.

Sat Jan 11 14:40:17 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* ltconfig, ltmain.sh: New files for libtool support. libguile,
 	rx, gh and gtcltk-lib can now be build as shared libraries.
	* Makefile.am (EXTRA_DIST): Added ltconfig and ltmain.sh

Sun Jan  5 16:57:10 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Guile 1.0 released.  This is the first release by the Free
	Software Foundation; Cygnus has also released earlier versions of
	Guile.
	
	* GUILE-VERSION: Updated version number.
	* NEWS: Added comments for all the user-visible changes marked in
	the ChangeLogs.
	* README: Updated for release.

Thu Dec 12 00:14:32 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* scsh: new directory.

Mon Dec  2 17:33:04 1996  Tom Tromey  <tromey@cygnus.com>

	* configure.in: Generate doc/guile-programmer/Makefile and
	doc/guile-user/Makefile.

Sat Nov 30 23:45:54 1996  Tom Tromey  <tromey@cygnus.com>

	* aclocal.m4: Now automatically generated by aclocal.
	* threads.m4: New file.
	* guile.m4: New file.
	* Makefile.am, doc/Makefile.am: New files.
	* configure.in: Updated for Automake.  Avoid excessively verbose
	"greet" messages.

Wed Oct 16 07:32:14 1996  Mark Galassi  <rosalia@sarastro.lanl.gov>

	* lgh: directory renamed to gh, along with all prefixes of the
	high level library procedures.
