@@ -7,7 +7,18 @@ dnl top-level srcdir, and will initialize automake.  It also
 dnl defines the `module' variable.
 AC_DEFUN([AM_INIT_GUILE_MODULE],[
 . $srcdir/../GUILE-VERSION
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
+## Beginning of AM_INIT_AUTOMAKE macro
+AC_REQUIRE([AM_PROG_INSTALL])
+PACKAGE=[$1]
+AC_SUBST(PACKAGE)
+## AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
+VERSION=[$2]
+AC_SUBST(VERSION)
+AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
+AM_SANITY_CHECK
+AC_ARG_PROGRAM
+AC_PROG_MAKE_SET
+## End of AM_INIT_AUTOMAKE macro
 AC_CONFIG_AUX_DIR(..)
 module=[$1]
 AC_SUBST(module)])
