@@ -1,3 +1,10 @@
+Sat Mar 15 01:11:44 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* guile.m4 (AM_INIT_GUILE_MODULE): Replaced AM_INIT_AUTOMAKE macro
+ 	with its definition and commented out definition of PACKAGE.  This
+ 	changed seemed necessary after having removed PACKAGE from
+ 	libguile/acconfig.h.
+
 Mon Feb 24 21:43:26 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* ltconfig, ltmain.sh: New versions from libtool-0.9.
